<resources>
    <string name="app_name">Employee Nexus</string>
    <string name="title_home">Home</string>
    <string name="title_calloff">CallOff</string>
    <string name="title_history">History</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="unexcused">Unexcused</string>
    <string name="reason">Reason</string>
    <string name="weather">Weather</string>
    <string name="illness">Illness</string>
    <string name="emergency">Emergency</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="confirm">Confirm</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="news_and_announcements">News and Announcements</string>
</resources>