<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calloff"
        android:icon="@drawable/ic_baseline_add_ic_call_24"
        android:title="@string/title_calloff" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_clockIn"
        android:icon="@drawable/userbutton"
        android:title="Clock In" />

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/calendarbutton"
        android:title="Schedule" />

</menu>